--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="#">
     <title>Spotify - Your favourite music is here </title>
 </head>
 <body>
@@ -81,15 +82,15 @@
 
 
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min="0" max="100" />
+        <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100" />
         <div class="icons">
             <i class="fa-solid fa-3x fa-step-backward"></i>
-            <i class="fa-solid fa-3x fa-play"></i>
+            <i id="masterPlay" class="fa-solid fa-3x fa-play"></i>
             <i class="fa-solid fa-3x fa-step-forward"></i>
             <!-- font awesome icons-->
         </div>
         <div class="songInfo">
-            <img src="playing.gif" width="42px" alt=""> Let me love you - Justin Beiber
+            <img id="gif" src="playing.gif" width="42px" alt=""> Let me love you - Justin Beiber
         </div>
     </div>
     <script src="https://kit.fontawesome.com/648dc01c67.js" crossorigin="anonymous"></script>
