--- a/index.html
+++ b/index.html
@@ -25,53 +25,53 @@
             <div class="songItemContainer">
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName"><marquee direction="left">Let me Love You</marquee></span>
+                    <span class="songName"><marquee direction="left">celtic-irish-scottish-tin-whistle-background-music-10455</marquee></span>
                     <span class="timestamp"><span class="duration">05:34</span><i id='0' class="songItemPlay fa-solid fa fa-play"></i></span>
                     
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='1'  class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='2' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='3' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='4' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='5' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='6' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='7' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='8' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
                     <span class="timestamp"><span class="duration">05:34</span>  <i id='9' class="songItemPlay fa-solid fa fa-play"></i></span>
                 </div>
     
@@ -87,7 +87,7 @@
         <div class="bottom">
             <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100" />
             <div class="songInfo">
-                <img id="gif" src="playing.gif" width="42px" alt=""> <span id="masterSongName">Kabira</span>
+                <img id="gif" src="playing.gif" width="42px" alt=""> <span id="masterSongName">celtic-irish-scottish-tin-whistle-background-music-10455</span>
             </div>
             <div class="icons">
                 <i id='previous' class="fa-solid fa-3x fa-step-backward"></i>
